--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/suremarc/bitburner#readme",
   "devDependencies": {
+    "@types/ws": "^8.5.5",
     "esbuild": "^0.18.11",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.4",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "ws": "^8.13.0"
   }
 }
