--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,10 @@
     "noImplicitAny": true,
     "module": "es6",
     "target": "es5",
-    "allowJs": true
+    "allowJs": true,
+    "checkJs": true,
   },
   "files": [
-    "src/index.ts"
+    "src/main.ts",
   ]
 }
