--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/ws": "^8.5.5",
     "esbuild": "^0.18.11",
+    "glob": "^10.3.1",
     "prettier": "^2.8.8",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
